# amazon-braket-containers

./: .gitignore  README.md  buildspec.yml  pyproject.toml  testspec.yml
.github/: dependabot.yml  pr-title-checker-config.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/actions/build-container/: action.yml
.github/workflows/: build-py-reqs.yml  integ-tests.yml  python-package.yml
base/: buildspec.yml
cudaq/: buildspec.yml
logs/: BuildBaseCPUJobsPy3DockerImage  BuildPytorchGPUJobsPy3DockerImage
pytorch/: buildspec.yml
qiskit/: buildspec.yml
requirements/: requirements_common.txt  requirements_pytorch.txt
src/: braket_container.py  buildspec.py  constants.py  context.py  image.py  image_builder.py  main.py  metrics.py  output.py  requirements.txt  tag_image.py  utils.py
tensorflow/: buildspec.yml
test/: conftest.py  perform_additional_setup.py  requirements-base.txt  requirements-ci.txt  requirements-sagemaker.txt  requirements-test.txt  requirements.txt
test/braket_tests/base/: test_jobs_qaoa.py  test_jobs_simple.py  test_mpi.py
test/braket_tests/common/: braket_jobs_util.py  image_run_util.py  mpi_checks.py
test/braket_tests/cudaq/: test_jobs_qaoa.py  test_mpi.py
test/braket_tests/pytorch/: test_jobs_qaoa.py  test_mpi.py
test/braket_tests/tensorflow/: test_jobs_qaoa.py
test/resources/: bell_circuit.py  qaoa_entry_point.py  qaoa_utils.py  run_script.py
test/sagemaker_tests/: test_basics.py
test/unit_tests/: test_braket_container.py  test_data_parallel.py
(+43 files in other folders)
